apps/web/src/app/tasks/components/task-detail/task-detail.component.scss
@import '../../../shared/styles/extensions.scss';

.container {
    display: grid;
    justify-content: center;
}

// Mark as Complete
.complete-button {
    @extend %button-shared;

    padding: 0.5rem 1rem;
    margin-right: 14px;

    background: var(--app-button-primary-color);
    color: var(--app-text-white);
}

.complete-button:hover,
.complete-button:focus {
    background: var(--app-button-primary-hover);
}

// Edit Button
.edit-button {
    @extend %button-shared;

    padding: 0.5rem 1rem;
    margin-right: 16px;

    background: var(--app-bg-secondary-color);
    border: 1px solid #eaedf3;
    color: #000000;
}

.edit-button:hover,
.edit-button:focus {
    background: #f2f2f2;
}

task-detail {
    box-sizing: border-box;

    width: 592px;
    height: 585px;
    padding: 56px;

    background-color: white;
    border: 1px solid #eaedf3;
    border-radius: 4px;
}

@media (max-width: 768px) {
    task-detail {
        width: 100%;
        max-width: 592px;
        height: 496px;

        padding: 24px;
        margin-bottom: 164px;
    }

    .mob-none {
        display: none;
    }

    .complete-button {
        margin-right: 0px;
    }

    .edit-button {
        margin-left: 119px;
    }
}

